--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="womenEngApp">
   <head>
+    <meta charset="utf-8">
+    <meta content="Women in Engineering" name="title">
+    <meta content="A list of women in engineering to help resource-constrained startups recruit great talent." name="description">     
+  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
