--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta content="Women in Engineering" name="title">
     <meta content="A list of women in engineering to help resource-constrained startups recruit great talent." name="description">     
   
+    <title>Women in Engineering</title>
+  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
