--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container-fluid">
       <header class="container">
         <h2>Women in engineering</h2>
-        <p>Even resource-constrained startups can recruit women—it's not actually that hard to source women in engineering. <a href="https://medium.com/@cjc/recently-i-spoke-to-a-founder-of-a-20-person-startup-who-said-if-google-with-hundreds-maybe-bdf7132d78d7">Read more</a>.</p>
+        <p>Even resource-constrained startups can recruit women in engineering—it's not actually that hard. I hope this list makes it easier. <a href="https://medium.com/@cjc/recently-i-spoke-to-a-founder-of-a-20-person-startup-who-said-if-google-with-hundreds-maybe-bdf7132d78d7">Read more</a>.</p>
 
-        <a href="https://docs.google.com/a/stripe.com/forms/d/1eWKYU7W3gAYZUoGCvG98kvMDrwoL3TfE4OjvZHVHaVc/viewform"><button type="button" class="btn btn-primary">Submit an addition</button></a>
+        <a href="https://docs.google.com/a/stripe.com/forms/d/1eWKYU7W3gAYZUoGCvG98kvMDrwoL3TfE4OjvZHVHaVc/viewform"><button type="button" class="btn btn-primary">Submit an addition or edit</button></a>
         <a href="mailto:cristinajcordova@gmail.com"><button type="button" class="btn btn-default">Request removal</button></a>
       </header>
 
