--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body ng-controller="WomenEngCtrl">
     <div class="container-fluid">
       <header class="container">
-        <h2>Women in engineering</h2>
+        <h2>Women in Engineering</h2>
         <p>Even resource-constrained startups can recruit women in engineering—it's not actually that hard. I hope this list makes it easier. <a href="https://medium.com/@cjc/recently-i-spoke-to-a-founder-of-a-20-person-startup-who-said-if-google-with-hundreds-maybe-bdf7132d78d7">Read more</a>.</p>
 
         <a href="https://docs.google.com/a/stripe.com/forms/d/1eWKYU7W3gAYZUoGCvG98kvMDrwoL3TfE4OjvZHVHaVc/viewform"><button type="button" class="btn btn-primary">Submit an addition or edit</button></a>
