--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta content="Women in Engineering" name="title">
     <meta content="A list of women in engineering to help resource-constrained startups recruit great talent." name="description">     
-  
+    <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
+    
     <title>Women in Engineering</title>
   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
